--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -9,7 +9,7 @@
     <div class="collapse navbar-collapse" id="navbarResponsive">
       <ul class="navbar-nav ml-auto">
         <li class="nav-item">
-          <a class="nav-link" href="{{"/about" | relative_url }}">About</a>
+          <a class="nav-link" href="{{"/about" | relative_url }}">Chi sono</a>
         </li>
         <!--
         <li class="nav-item">
@@ -17,7 +17,7 @@
         </li>
         -->
         <li class="nav-item">
-          <a class="nav-link" href="{{"/research/index" | relative_url }}">Research</a>
+          <a class="nav-link" href="{{"/research/index" | relative_url }}">Prigetti di ricerca</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="{{"/cv" | relative_url }}">CV</a>
